chore: add reset to avoid unexpected spacing

--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,19 @@
+*,
+*::after,
+*::before {
+  margin:0;
+ padding:0;
+ box-sizing:border-box;
+}
+
+html {
+ font-size:62.5%;
+} 
+
+body {
+ font-size:1.6rem;
+}
+
 body{
     font-family: Arial, Helvetica, sans-serif;
     background-color: rgb(255, 155, 24);
